# pose6dof-transformers-diffusion

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  PLANNING.md  README.md  REPRODUCIBILITY.md  dashboard.py  index.html  pyproject.toml  render.yaml  requirements.colab.lock.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
archive/: README.md
archive/notebooks-legacy/: 04_math_foundations.ipynb  05_grasp_planning.ipynb  06_diffusion_policy_training_LOCAL.ipynb
data/configs/: base.yaml  experiment_comparison.yaml  experiment_foundationpose.yaml  experiment_gdrnet.yaml
data/models/: diffusion_policy_extended_mps.pth  diffusion_policy_grasp.pth  diffusion_policy_ultra_summary.json
data/scenes/: README.md  bin_base.ttt  scenarios.yaml
docker/: Dockerfile  README-API.md  README-GPU.md  api.Dockerfile  docker-compose.yml  inference-gpu.Dockerfile  patch_foundationpose.py  ros_entrypoint.sh
docs/: APLICACIONES_INDUSTRIALES.md  CLEANUP_MANIFEST.md  COMPARATIVA_SOTA_LENGUAJE.md  ENTREGA4_COMPARATIVA_VALIDACION.md  EXTRAPOLACION_INDUSTRIAL.md  FAQ_Defensa_preguntas_dificiles.md  Guion_Completo_Presentaciones.docx  Guion_Defensa_TFM.md  Guion_Defensa_TFM_narrativa.md  INNOVACION_Y_ESTADO_DEL_ARTE.md  INTEGRATION_PIPELINE.md  LENGUAJE_NATURAL.md  PERCEPCION_INTERCAMBIABLE.md  PICK_LIMITATIONS.md  PLAN_EXPLORACIONES_POST_TFM.md  PROTOCOLO_EXPERIMENTAL.md  ROADMAP_POSTTFM.md  Runbook_Demos_Charla.md  TFM_Capitulo_4_Marco_Matematico.docx  TFM_Capitulo_5_Pipeline.docx  TFM_Capitulo_6_Experimentos.docx  TFM_Capitulo_7_Conclusiones.docx  TFM_Entrega1_UNIR_v1.docx  TFM_Final_v2.docx  TFM_Final_v3.docx  TFM_Final_v4.docx  TFM_Final_v5.docx  TFM_Final_v6.docx  TFM_Final_v7.docx  cap5_seccion_planificacion_poses_reales.md  cap5_seccion_simulacion_coppelia.md  cap6_seccion_foundationpose.md  dashboard_ejecutivo.html
docs/defensa/: CHECKLIST_PREDEPOSITO.md
docs/deposito/: TFM_UNIR_Godoy_Carrasco.docx
docs/entrega2/: FAQ_DEFENSA.md  TFM_Defensa_Slides.pptx  TFM_Entrega2_UNIR.docx  TFM_Entrega2_UNIR.md
docs/entrega3/: CHECKLIST_PREDEPOSITO.md
docs/entrega4/: TFM_Entrega4_UNIR.docx
docs/exploraciones/: 01_bootstrap_ci_toolkit.md  02_distillation_2nfe.md  03_open_license_pipeline.md  04_vla_lite_clip.md  05_vla_robustness.md  06_vla_shapes.md  07_visual_simulations.md  08_multi_object.md  09_size_attribute.md  10_sequential_instructions.md  11_clip_image_grounding.md  12_robustness_domain_random.md  13_spatial_reasoning.md
docs/predeposito/: TFM_Predeposito_UNIR.docx
experiments/: aggregate_e2e_timings.py  build_demo_reel.py  collect_diffusion_dataset.py  collect_diffusion_dataset_v5.py  collect_diffusion_dataset_v8_randomized.py  collect_diffusion_dataset_v9_clutter.py  distill_diffusion_2nfe.py  eval_diffusion_iter1.py  eval_diffusion_iter2_sim.py  eval_diffusion_iter3_sim.py  eval_diffusion_iter4_multi_sim.py  eval_diffusion_iter5_sim.py  eval_diffusion_iter7a_sim.py  eval_diffusion_iter7b_sim.py  eval_diffusion_iter8_sim.py  eval_diffusion_iter9_sim.py  eval_dppo_phaseA_sim.py  eval_heuristic_baseline_multi_sim.py  eval_heuristic_baseline_sim.py  exp10_profiling.py  exp11_paired_stats.py  exp12_per_object_analysis.py  exp13_diffusion_models_comparison.py  exp15_open_license_comparison.py  exp16_vla_lite_clip.py  exp17_vla_robustness.py  exp18_vla_shapes.py  exp19_visual_simulations.py  exp20_vla_multi_object.py  exp21_visual_multi_object.py  exp22_vla_size.py  exp23_sequential_instructions.py  exp24_clip_image_grounding.py  exp25_clip_image_robustness.py  exp26_spatial_reasoning.py  exp3_rotation_ablation.py  exp4_grasp_comparison.py  exp5_diffusion_steps_ablation.py  exp6_robustness_analysis.py  exp7_pbvs_convergence.py  (+29 more)
experiments/checkpoints/: fp_tless_checkpoint.json  fp_ycbv_checkpoint.json
experiments/integration_test/: integration_results.json
experiments/results/: comparison_fp_vs_gdrnet.json  dppo_phaseA_log.json  local_metrics_with_bootstrap.json
notebooks/: 00_environment_check.py  01_gdrnet_foundationpose_eval.ipynb  02_dataset_exploration.ipynb  04_diffusion_extended_training_MPS.ipynb  04_diffusion_extended_training_MPS.py  04_math_foundations.ipynb  05_grasp_planning.ipynb  06_diffusion_policy_training.ipynb  07_pipeline_tutorial_completo.ipynb
notebooks/colab/: 00_colab_setup.ipynb  01_foundationpose_eval.ipynb  02_gdrnet_eval.ipynb  03_results_analysis.ipynb  04_diffusion_extended_training.ipynb
scripts/: adapt_and_run_06.py  add_defensa_swap_slide.py  add_demo_buttons.py  api_server.py  build_bin_base_scene.py  build_custom_bop_scene.py  build_defense_slides.py  build_divulga_extras.py  build_entrega4_docx.py  build_entrega4_slides.py  build_guion_defensa.py  build_guion_divulgativa.py  demo_charla.py  download_datasets.sh  download_drive_assets.py  download_fp_weights.py  embed_sim_videos.py  fix_defensa_ux.py  gradio_demo.py  integration_test.py  launch_api_and_gradio.sh  make_diagrams.py  make_hero_figures.py  patch_fp_for_colab.py  refresh_defensa.py  restyle_divulga_pastel.py  restyle_robotica_ia.py  run_evaluation.py  run_experiment.py  run_inference.sh  smoke_e2e_served.py  verify_datasets.py  verify_e2e.py  verify_tfm_consistency.py
src/: __init__.py  pipeline.py
src/control/: __init__.py  pbvs.py
src/language/: __init__.py  (+6 more)
tests/: README.md  conftest.py  test_api_server.py  test_checkpoint_adapter.py  test_cine_camera.py  test_coppeliasim_bridge.py  test_dashboard_language.py  test_diffusion_dataset.py  test_diffusion_loss.py  test_diffusion_policy.py  test_diffusion_scheduler.py  test_exp27_consistency.py  test_grasp_sampler.py  test_language_battery.py  test_language_grounding.py  test_language_llm_fallback.py  test_language_parser.py  test_language_pick_core.py  test_language_schema.py  test_lie_groups.py  test_loaders.py  test_logger.py  test_metrics.py  test_multi_object_scene.py  test_pbvs_controller.py  test_pipeline.py  test_pipeline_language.py  test_reel_overlay.py  test_reward_fn.py  test_rotations.py  test_scenarios_loader.py  test_tfm_consistency.py  test_visual_encoder.py  test_vla_lite_modules.py
(+164 files in other folders)
