[project]
name = "pose6dof-transformers-diffusion"
version = "0.1.0"
description = "Estimación de Pose 6-DoF mediante Transformers y Modelos de Difusión para Bin Picking Robótico"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    { name = "Giocrisrai Godoy Bonillo", email = "giocrisrai@gmail.com" },
    { name = "José Miguel Carrasco", email = "jmcarrascoc@gmail.com" },
]

dependencies = [
    # Core scientific stack
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "imageio>=2.31",

    # Deep Learning
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=0.9",
    "diffusers>=0.25",

    # 3D geometry & pose
    "pytransform3d>=3.0",
    "trimesh>=4.0",

    # Experiment tracking
    "tensorboard>=2.14",
    "wandb>=0.16",

    # Config management
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # Utilities
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
bop = [
    "pycocotools>=2.0",
    "bop_toolkit_lib",
]
colab = [
    "diffusers>=0.25",
    "accelerate>=0.25",
    "transformers>=4.36",
    "trimesh>=4.0",
]
# Deps específicas para el contenedor GPU (docker/inference-gpu.Dockerfile).
# pytorch3d y nvdiffrast NO se resuelven desde PyPI — se instalan en el Dockerfile
# con versiones de wheel compatibles con torch 2.1.2+cu121. Las declaramos aquí
# solo como marcadores informativos.
inference-gpu = [
    "accelerate>=0.25",
    "transformers>=4.36",
    "kornia>=0.7",
    "einops>=0.7",
    "ruamel.yaml>=0.18",
    "ninja>=1.11",
    "pybind11>=2.11",
    "transformations>=2024.5.24",
    "gdown>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
