[project]
name = "pose6dof-transformers-diffusion"
version = "0.1.0"
description = "Estimación de Pose 6-DoF mediante Transformers y Modelos de Difusión para Bin Picking Robótico"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    { name = "Giocrisrai Godoy Bonillo", email = "giocrisrai@gmail.com" },
    { name = "José Miguel Carrasco", email = "jmcarrascoc@gmail.com" },
]

dependencies = [
    # Core scientific stack
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "imageio>=2.31",
    # Deep Learning
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=0.9",
    "diffusers>=0.25",
    # 3D geometry & pose
    "pytransform3d>=3.0",
    "trimesh>=4.0",
    # Experiment tracking
    "tensorboard>=2.14",
    "wandb>=0.16",
    # Config management
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Utilities
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "python-pptx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
# Dashboard productivo (Streamlit) — `streamlit run dashboard.py`.
# streamlit>=1.49: requerido por la API `width="stretch"` (la antigua
# use_container_width fue removida tras 2025-12-31).
dashboard = [
    "streamlit>=1.49,<2",
    "pandas>=2.0",
]
# Demo interactivo de la charla (Gradio) — `python scripts/demo_charla.py`.
# gradio>=6: el demo usa la API de Gradio 6 (css/theme en launch(), sin show_api).
demo = [
    "gradio>=6,<7",
]
# API REST del pipeline — `python scripts/api_server.py` (docker/api.Dockerfile).
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]
# Scripts de análisis y generación de figuras (experiments/, scripts/make_diagrams).
# graphviz (Python) además requiere el binario `dot` del sistema (brew install graphviz).
analysis = [
    "scikit-learn>=1.3",
    "graphviz>=0.20",
    "bop-bootstrap-ci>=0.1",
]
bop = [
    "pycocotools>=2.0",
    "bop_toolkit_lib",
]
colab = [
    "diffusers>=0.25",
    "accelerate>=0.25",
    "transformers>=4.36",
    "trimesh>=4.0",
]
# Cliente Python para CoppeliaSim ZMQ Remote API.
# Necesario para experiments/run_coppelia_smoke_test.py y src/simulation/coppeliasim_bridge.py.
# Requiere CoppeliaSim Edu V4.10.0 corriendo localmente (no es dependencia runtime de los modelos).
sim = [
    "coppeliasim-zmqremoteapi-client>=2.0.4",
]
# Deps específicas para el contenedor GPU (docker/inference-gpu.Dockerfile).
# pytorch3d y nvdiffrast NO se resuelven desde PyPI — se instalan en el Dockerfile
# con versiones de wheel compatibles con torch 2.1.2+cu121. Las declaramos aquí
# solo como marcadores informativos.
inference-gpu = [
    "accelerate>=0.25",
    "transformers>=4.36",
    "kornia>=0.7",
    "einops>=0.7",
    "ruamel.yaml>=0.18",
    "ninja>=1.11",
    "pybind11>=2.11",
    "transformations>=2024.5.24",
    "gdown>=5.0",
]
# Parser de lenguaje natural con LLM local/remoto (Fase 2, opcional).
language-llm = [
    "ollama>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", ".git", "__pycache__", "build", "dist", "data/datasets", "**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
# Reglas ignoradas con justificación:
ignore = [
    # Notación matemática estándar — variables como R, K, T, M, P son convencionales
    # en SE(3)/SO(3), camera intrinsics, transformaciones rígidas, deep learning
    "N803",  # invalid-argument-name (R, K, t, etc.)
    "N806",  # non-lowercase-variable-in-function (mismo motivo)
    # E402: scripts requieren sys.path.insert(0, ...) ANTES de imports del paquete
    "E402",  # module-import-not-at-top-of-file
    # E501: tablas, JSONs y URLs largos en código son legítimos
    "E501",  # line-too-long
    # N802: nombres como 'so3_log', 'se3_error' son convenciones del campo (Lie groups)
    "N802",  # invalid-function-name
    # N812: 'import torch.nn.functional as F' es la convención universal de PyTorch
    "N812",  # lowercase-imported-as-non-lowercase
]

[tool.ruff.lint.per-file-ignores]
# Notebooks Jupyter convertidos: imports al medio y estilo compacto (celdas)
"notebooks/**/*.py" = ["E402", "F401", "E702", "E731"]
# Scripts de experimentos: imports condicionales y estilo compacto permitido
# (código exploratorio de un solo uso; E701/E702 = varias sentencias por línea,
# E731 = asignación de lambda son idioms habituales en scripts de análisis).
"experiments/**/*.py" = ["F401", "E701", "E702", "E731", "I001", "N816", "E741"]
# __init__.py: imports son re-exports (parte de API pública)
"**/__init__.py" = ["F401"]
# ros2_interface: imports condicionales (ROS 2 puede no estar disponible)
"src/simulation/ros2_interface.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires CoppeliaSim running on localhost:23000 (skip if unavailable)",
    "slow: requiere pesos/red (CLIP o LLM); se omite en la suite base",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.mypy]
python_version = "3.10"
# Código científico (numpy/torch/trimesh/cv2/coppeliasim) sin stubs de tipos:
# ignoramos imports sin tipos y no exigimos anotar todo.
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
# experiments/ y notebooks/ son scripts de un solo uso (sin estructura de paquete);
# se excluyen del type-check estricto, igual que en el tiering de ruff.
exclude = ["^experiments/", "^notebooks/", "\\.ipynb$"]
